[package]
name = "ssl_test"
version = "0.1.0"
authors = ["OZ <normandiggs@gmail.com>"]

[dependencies]
ssh2 = "0.3.1"
libssh2-sys = "0.2.5"

[dependencies.rusoto]
features = ["s3"]
version = "0.31.0"
git = "https://github.com/e-oz/rusoto"
branch = "reqwest1"

[replace]
"hyper:0.9.14" = {git= "https://github.com/e-oz/hyper", branch= "0.9.x"}
